Adding index.html file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,8 @@
     <header>
         <div class="top-right-buttons">
             <button id="mygroups">My Groups</button>
-            <button id="profile"><a style="position:relative" href="Ember Lu">emberlu@gmail.com</a></button>
+            <a style="position:relative" href="Ember Lu"></a>
+            <button id="profile">emberlu@gmail.com</a></button>
         </div>
         <img id="logo" src="../pictures/lockedResized.png" alt="LockedIn Logo">
         
