--- a/frontend/newGroup.html
+++ b/frontend/newGroup.html
@@ -32,11 +32,11 @@
       <!-- <input type="text" id="time" name="time" placeholder="Enter WHEN you want to study" required> -->
 
       <div class="container1">
-        <button class="button1">8am-11pm</button>
-      <button class="button1">11pm-2pm</button>
-      <button class="button1">2pm-5pm</button>
-      <button class="button1">5pm-8pm</button>
-      <button class="button1">8pm-11pm</button>
+        <button type="button" class="button1">8am-11pm</button>
+      <button type="button" class="button1">11pm-2pm</button>
+      <button type="button" class="button1">2pm-5pm</button>
+      <button type="button" class="button1">5pm-8pm</button>
+      <button type="button" class="button1">8pm-11pm</button>
 
       
 
@@ -53,12 +53,17 @@
 
       <!-- <p>Don't have an account? <a href="signUp.html" style="color:dodgerblue">Register now!</a></p> -->
 
-      <p id="login-message" style="color:red; text-align:center;"></p>
+      <!-- <p id="login-message" style="color:red; text-align:center;"></p> -->
 
-      <div class="clearfix">
+      <!-- <div class="clearfix">
         <button type="submit" class="signupbtn">Create Group</button>
-      </div>
-    </div>
+    </div> -->
+        
+        <!-- Trigger/Open The Modal-->
+
+    <!-- <a href="index.html" target="_blank">Create Group</a> -->
+    <button class="endbutton">Create Group</button>
+
   </form>
 
   <script src="newGroup.js"></script>
