login signup index stuff

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="../pictures/lockedResized.png" alt="LockedIn Logo">
+        <img id="logo" src="../pictures/lockedResized.png">
 
 
         <div class="top-buttons">
