finally fixed buttons for mygroup to create group

--- a/frontend/newGroup.html
+++ b/frontend/newGroup.html
@@ -62,7 +62,7 @@
         <!-- Trigger/Open The Modal-->
 
     <!-- <a href="index.html" target="_blank">Create Group</a> -->
-    <button class="endbutton">Create Group</button>
+    <button class="endbutton"id="end">Create Group</button>
 
   </form>
 
