--- a/frontend/myGroups.html
+++ b/frontend/myGroups.html
@@ -32,10 +32,10 @@
         <body>
             <!-- <div class="button">
                 <a href="newGroup.html" target="_blank">Create Group</a> -->
-            <div class="button">
-                <button type="button" id="creategroupButton">Create Group</button>
-                </div>
+            <div>
+                <button class="button" type="button" id="creategroupButton">Create Group</button>
             </div>
+        </div>
           <!-- <p>Please fill in this form to create an account.</p> -->
           <!-- <hr>  -->
       
