my groups in index is now a button that goes to my groups page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,9 @@
 
 
         <div class="top-buttons">
-            <button id="mygroups">my groups</button>
+            <div>
+                <button class="button" type="button" id="mygroups">My Groups</button>
+            </div>
 
             <div class="top-right">
                 
