--- a/frontend/profiledisplay.html
+++ b/frontend/profiledisplay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="profiledisplay.css">
 </head>
 <body>
     <header>
