--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,6 +65,10 @@
             <h3>Information: CSE12 Weeks 1 and 2</h1>
             <h3>Location: McHenry</h3>
             <h3>Time: Morning/Afternoon (Flexible)</h3>
+
+            <div id="filtersbox">
+                <button id="filters"><a href="../backend/filters/filters.html">Filters</a></button>
+            </div>
         </div>
     </main>
     
