--- a/backend/filters/filters.html
+++ b/backend/filters/filters.html
@@ -60,7 +60,7 @@
       </li>
 
       <!-- Topics Filter -->
-      <li>
+      <li style="display:flex; justify-content: center; align-items: center; gap: 5px;">
         <span>📚 Topics</span>
         <!-- <button class="add-btn" onclick="showTopicInput()">➕</button> -->
         <input type="file" id="syllabusUpload" class="hidden filter-control">
