--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,10 +66,12 @@
             <h3>Location: McHenry</h3>
             <h3>Time: Morning/Afternoon (Flexible)</h3>
 
+                
             <div id="filtersbox">
-                <button id="filters"><a href="../backend/filters/filters.html">Filters</a></button>
+                <button id="filters"><a style="text-decoration: none; color: black;" href="../backend/filters/filters.html">Filters</a></button>
             </div>
         </div>
+
     </main>
     
     <script src="index.js" ></script>
