--- a/frontend/newGroup.html
+++ b/frontend/newGroup.html
@@ -34,10 +34,32 @@
             <button type="button" id="fifthtime" class="button1">8pm-11pm</button>
         </div>
 
-        <button class="endbutton" id="end" type="submit">Create Group</button>
+        <button class="endbutton"id="end">Create Group</button>
     </div>
   </form>
 
-  <script src="studygroups.js"></script>
+  <div class="popup-overlay" id="popupOverlay" style="display: none;">
+    <div class="popup" id="popup">
+        <span class="close" id="closePopup">&times;</span>
+
+        <!-- <button id="okButton">OK</button> -->
+
+        <div class="popup-content">
+
+            <p>Group Created!</p>
+
+            <p>Navigating back to home screen...</p>
+
+            <div class="button">
+                <button type="button" id="okButton">OK!</button>
+              </div>
+
+                
+                
+            </div>
+        </div
+</div>
+
+  <script src="newGroup.js"></script>
 </body>
 </html>
