--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
             <div class="top-right">
                 
                 <a style="position:relative" href="Ember Lu">emberlu@gmail.com</a>
-                <button id="profile"></button>
+                <button id="profile"><img src="https://www.freeiconspng.com/thumbs/profile-icon-png/profile-icon-9.png"></button>
 
             </div>
         </div>
@@ -61,7 +61,7 @@
 
         </div>
         <div class="info">
-            <h1>Name: CSE12 Study Group</h1>
+            <h1>CSE12 Study Group</h1>
             <h3>Information: CSE12 Weeks 1 and 2</h1>
             <h3>Location: McHenry</h3>
             <h3>Time: Morning/Afternoon (Flexible)</h3>
